--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
     <scope>provided</scope>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+<dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <version>9.2.0</version>
+</dependency>
+
+
   </dependencies>
  <profiles>
   <profile>
